@@ -1,11 +1,16 @@
-﻿using System;
-using System.ComponentModel.DataAnnotations;
-using System.Xml.Serialization;
+﻿using System.Xml.Serialization;
 
 namespace Amazon.Ec2
 {
     public class BlockDeviceMapping
     {
+        public BlockDeviceMapping() { }
+
+        public BlockDeviceMapping(EbsBlockDevice ebs)
+        {
+            Ebs = ebs;
+        }
+
         [XmlElement("deviceName")]
         public string DeviceName { get; set; }
 
@@ -14,36 +19,6 @@ namespace Amazon.Ec2
 
         [XmlElement("virtualName")]
         public string VirtualName { get; set; }
-    }
-
-    public class EbsBlockDevice
-    {
-        [XmlElement("volumeId")]
-        public string VolumeId { get; set; }
-
-        [XmlElement("status")]
-        public string Status { get; set; }
-
-        [XmlElement("attachTime")]
-        public DateTime? AttachTime { get; set; }
-
-        [XmlElement("deleteOnTermination")]
-        public bool? DeleteOnTermination { get; set; }
-
-        [XmlElement("encrypted")]
-        public bool? Encrypted { get; set; }
-
-        [Range(100, 20000)]
-        public int? Iops { get; set; }
-
-        public string SnapshotId { get; set; }
-
-        // The size of the volume, in GiB.
-        [Range(1, 16384)]
-        public int? VolumeSize { get; set; }
-
-        // gp2, io1, st1, sc1, or standard.
-        public string VolumeType { get; set; }
     }
 }
 
