@@ -1,6 +1,0 @@
-﻿namespace Amazon.Ec2
-{
-    public interface IEc2Response
-    {
-    }
-}
